--- a/app/globals.css
+++ b/app/globals.css
@@ -3,14 +3,20 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #fbfbfe;
+  --foreground: #040316;
+  --primary: #005499;
+  --secondary: #eb9800;
+  --accent: #175369;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --foreground: #eae9fc;
+    --background: #010104;
+    --primary: #66baff;
+    --secondary: #ffad14;
+    --accent: #96d2e8;
   }
 }
 
