--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,14 @@
   --accent: #175369;
 }
 
+[data-theme="dark"] {
+  --foreground: #eae9fc;
+  --background: #010104;
+  --primary: #66baff;
+  --secondary: #ffad14;
+  --accent: #96d2e8;
+}
+
 /* @media (prefers-color-scheme: dark) {
   :root {
     --foreground: #eae9fc;
